--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <!-- Content here -->
         <div class="row">
             <div class="col-sm-12">
-                <h1>Welcome To Project - Thyroid disease detection</h1>
+                <h1>Welcome To Project - Thyroid disease detection 1</h1>
             </div>
         </div>
         <br />
